[Multi-stage] Clean up RelNode to Operator handling