@@ -19,15 +19,13 @@
 package org.apache.pinot.query.runtime.operator;
 
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.List;
-import javax.annotation.Nullable;
 import org.apache.pinot.common.datablock.DataBlock;
 import org.apache.pinot.common.datatable.StatMap;
 import org.apache.pinot.common.utils.DataSchema;
 import org.apache.pinot.common.utils.DataSchema.ColumnDataType;
-import org.apache.pinot.query.planner.logical.RexExpression;
+import org.apache.pinot.query.planner.plannode.FilterNode;
 import org.apache.pinot.query.runtime.blocks.TransferableBlock;
 import org.apache.pinot.query.runtime.operator.operands.TransformOperand;
 import org.apache.pinot.query.runtime.operator.operands.TransformOperandFactory;
@@ -55,17 +53,16 @@ public class FilterOperator extends MultiStageOperator {
   private static final Logger LOGGER = LoggerFactory.getLogger(FilterOperator.class);
   private static final String EXPLAIN_NAME = "FILTER";
 
-  private final MultiStageOperator _upstreamOperator;
+  private final MultiStageOperator _input;
   private final TransformOperand _filterOperand;
   private final DataSchema _dataSchema;
   private final StatMap<StatKey> _statMap = new StatMap<>(StatKey.class);
 
-  public FilterOperator(OpChainExecutionContext context, MultiStageOperator upstreamOperator, DataSchema dataSchema,
-      RexExpression filter) {
+  public FilterOperator(OpChainExecutionContext context, MultiStageOperator input, FilterNode node) {
     super(context);
-    _upstreamOperator = upstreamOperator;
-    _dataSchema = dataSchema;
-    _filterOperand = TransformOperandFactory.getTransformOperand(filter, dataSchema);
+    _input = input;
+    _dataSchema = node.getDataSchema();
+    _filterOperand = TransformOperandFactory.getTransformOperand(node.getCondition(), _dataSchema);
     Preconditions.checkState(_filterOperand.getResultType() == ColumnDataType.BOOLEAN,
         "Filter operand must return BOOLEAN, got: %s", _filterOperand.getResultType());
   }
@@ -88,10 +85,9 @@ public class FilterOperator extends MultiStageOperator {
 
   @Override
   public List<MultiStageOperator> getChildOperators() {
-    return ImmutableList.of(_upstreamOperator);
+    return List.of(_input);
   }
 
-  @Nullable
   @Override
   public String toExplainString() {
     return EXPLAIN_NAME;
@@ -99,7 +95,7 @@ public class FilterOperator extends MultiStageOperator {
 
   @Override
   protected TransferableBlock getNextBlock() {
-    TransferableBlock block = _upstreamOperator.nextBlock();
+    TransferableBlock block = _input.nextBlock();
     if (block.isEndOfStreamBlock()) {
       if (block.isErrorBlock()) {
         return block;
@@ -117,6 +113,7 @@ public class FilterOperator extends MultiStageOperator {
   }
 
   public enum StatKey implements StatMap.Key {
+    //@formatter:off
     EXECUTION_TIME_MS(StatMap.Type.LONG) {
       @Override
       public boolean includeDefaultInJson() {
@@ -129,6 +126,8 @@ public class FilterOperator extends MultiStageOperator {
         return true;
       }
     };
+    //@formatter:on
+
     private final StatMap.Type _type;
 
     StatKey(StatMap.Type type) {
