@@ -18,16 +18,11 @@
  */
 package org.apache.pinot.query.runtime.operator;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.apache.calcite.rel.RelFieldCollation;
-import org.apache.calcite.rel.hint.RelHint;
 import org.apache.calcite.sql.SqlKind;
 import org.apache.pinot.calcite.rel.hint.PinotHintOptions;
 import org.apache.pinot.common.datatable.StatMap;
@@ -35,17 +30,15 @@ import org.apache.pinot.common.exception.QueryException;
 import org.apache.pinot.common.response.ProcessingException;
 import org.apache.pinot.common.utils.DataSchema;
 import org.apache.pinot.common.utils.DataSchema.ColumnDataType;
+import org.apache.pinot.core.data.table.Key;
 import org.apache.pinot.query.planner.logical.RexExpression;
-import org.apache.pinot.query.planner.plannode.AbstractPlanNode;
+import org.apache.pinot.query.planner.plannode.PlanNode;
 import org.apache.pinot.query.planner.plannode.WindowNode;
 import org.apache.pinot.query.routing.VirtualServerAddress;
 import org.apache.pinot.query.runtime.blocks.TransferableBlock;
 import org.apache.pinot.query.runtime.blocks.TransferableBlockTestUtils;
 import org.apache.pinot.query.runtime.blocks.TransferableBlockUtils;
 import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
-import org.testng.Assert;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
@@ -54,22 +47,26 @@ import static org.apache.pinot.common.utils.DataSchema.ColumnDataType.DOUBLE;
 import static org.apache.pinot.common.utils.DataSchema.ColumnDataType.INT;
 import static org.apache.pinot.common.utils.DataSchema.ColumnDataType.LONG;
 import static org.apache.pinot.common.utils.DataSchema.ColumnDataType.STRING;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+import static org.mockito.MockitoAnnotations.openMocks;
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertNotNull;
+import static org.testng.Assert.assertTrue;
 
 
 public class WindowAggregateOperatorTest {
-
   private AutoCloseable _mocks;
-
   @Mock
   private MultiStageOperator _input;
-
   @Mock
   private VirtualServerAddress _serverAddress;
 
   @BeforeMethod
   public void setUp() {
-    _mocks = MockitoAnnotations.openMocks(this);
-    Mockito.when(_serverAddress.toString()).thenReturn(new VirtualServerAddress("mock", 80, 0).toString());
+    _mocks = openMocks(this);
+    when(_serverAddress.toString()).thenReturn(new VirtualServerAddress("mock", 80, 0).toString());
   }
 
   @AfterMethod
@@ -81,383 +78,320 @@ public class WindowAggregateOperatorTest {
   @Test
   public void testShouldHandleUpstreamErrorBlocks() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-
-    Mockito.when(_input.nextBlock())
-        .thenReturn(TransferableBlockUtils.getErrorTransferableBlock(new Exception("foo!")));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
+    when(_input.nextBlock()).thenReturn(TransferableBlockUtils.getErrorTransferableBlock(new Exception("foo!")));
+    DataSchema resultSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{
+        INT, INT, DOUBLE
+    });
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
-
-    // When:
-    TransferableBlock block1 = operator.nextBlock(); // build
-
-    // Then:
-    Mockito.verify(_input, Mockito.times(1)).nextBlock();
-    Assert.assertTrue(block1.isErrorBlock(), "Input errors should propagate immediately");
-  }
-
-  @Test
-  public void testShouldHandleEndOfStreamBlockWithNoOtherInputs() {
-    // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-
-    Mockito.when(_input.nextBlock()).thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+        getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
     // When:
     TransferableBlock block = operator.nextBlock();
 
     // Then:
-    Mockito.verify(_input, Mockito.times(1)).nextBlock();
-    Assert.assertTrue(block.isEndOfStreamBlock(), "EOS blocks should propagate");
+    verify(_input, times(1)).nextBlock();
+    assertTrue(block.isErrorBlock(), "Input errors should propagate immediately");
+  }
+
+  @Test
+  public void testShouldHandleEndOfStreamBlockWithNoOtherInputs() {
+    // Given:
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
+    when(_input.nextBlock()).thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
+    DataSchema resultSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{
+        INT, INT, DOUBLE
+    });
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
+    WindowAggregateOperator operator =
+        getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
+
+    // When:
+    TransferableBlock block = operator.nextBlock();
+
+    // Then:
+    verify(_input, times(1)).nextBlock();
+    assertTrue(block.isSuccessfulEndOfStreamBlock(), "EOS blocks should propagate");
   }
 
   @Test
   public void testShouldWindowAggregateOverSingleInputBlock() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, 1}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, 1}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    DataSchema resultSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{
+        INT, INT, DOUBLE
+    });
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+        getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
     // When:
-    TransferableBlock block1 = operator.nextBlock();
-    TransferableBlock block2 = operator.nextBlock();
+    List<Object[]> resultRows = operator.nextBlock().getContainer();
 
     // Then:
-    Assert.assertTrue(block1.getNumRows() > 0, "First block is the result");
-    Assert.assertEquals(block1.getContainer().get(0), new Object[]{2, 1, 1.0},
-        "Expected three columns (original two columns, agg value)");
-    Assert.assertTrue(block2.isEndOfStreamBlock(), "Second block is EOS (done processing)");
+    assertEquals(resultRows.size(), 1);
+    assertEquals(resultRows.get(0), new Object[]{2, 1, 1.0});
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test
   public void testShouldWindowAggregateOverSingleInputBlockWithSameOrderByKeys() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-    List<RexExpression> order = ImmutableList.of(new RexExpression.InputRef(0));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, 1}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, 1}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    DataSchema resultSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{
+        INT, INT, DOUBLE
+    });
+    List<Integer> keys = List.of(0);
+    List<RelFieldCollation> collations =
+        List.of(new RelFieldCollation(0, RelFieldCollation.Direction.ASCENDING, RelFieldCollation.NullDirection.LAST));
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, order,
-            Arrays.asList(RelFieldCollation.Direction.ASCENDING), Arrays.asList(RelFieldCollation.NullDirection.LAST),
-            calls, Integer.MIN_VALUE, Integer.MAX_VALUE, WindowNode.WindowFrameType.RANGE, Collections.emptyList(),
-            outSchema, inSchema, getWindowHints(ImmutableMap.of()));
+        getOperator(inputSchema, resultSchema, keys, collations, aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
     // When:
-    TransferableBlock block1 = operator.nextBlock();
-    TransferableBlock block2 = operator.nextBlock();
+    List<Object[]> resultRows = operator.nextBlock().getContainer();
 
     // Then:
-    Assert.assertTrue(block1.getNumRows() > 0, "First block is the result");
-    Assert.assertEquals(block1.getContainer().get(0), new Object[]{2, 1, 1.0},
-        "Expected three columns (original two columns, agg value)");
-    Assert.assertTrue(block2.isEndOfStreamBlock(), "Second block is EOS (done processing)");
+    assertEquals(resultRows.size(), 1);
+    assertEquals(resultRows.get(0), new Object[]{2, 1, 1.0});
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test
   public void testShouldWindowAggregateOverSingleInputBlockWithoutPartitionByKeys() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, 1}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, 1}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    DataSchema resultSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{
+        INT, INT, DOUBLE
+    });
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE,
-            Integer.MAX_VALUE, WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+        getOperator(inputSchema, resultSchema, List.of(), List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
     // When:
-    TransferableBlock block1 = operator.nextBlock();
-    TransferableBlock block2 = operator.nextBlock();
+    List<Object[]> resultRows = operator.nextBlock().getContainer();
 
     // Then:
-    Assert.assertTrue(block1.getNumRows() > 0, "First block is the result");
-    Assert.assertEquals(block1.getContainer().get(0), new Object[]{2, 1, 1.0},
-        "Expected three columns (original two columns, agg value)");
-    Assert.assertTrue(block2.isEndOfStreamBlock(), "Second block is EOS (done processing)");
+    assertEquals(resultRows.size(), 1);
+    assertEquals(resultRows.get(0), new Object[]{2, 1, 1.0});
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test
   public void testShouldWindowAggregateOverSingleInputBlockWithLiteralInput() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.Literal(ColumnDataType.INT, 42)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, 3}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, 3}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    DataSchema resultSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{
+        INT, INT, DOUBLE
+    });
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.Literal(ColumnDataType.INT, 42)));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+        getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
     // When:
-    TransferableBlock block1 = operator.nextBlock();
-    TransferableBlock block2 = operator.nextBlock();
+    List<Object[]> resultRows = operator.nextBlock().getContainer();
 
     // Then:
-    Assert.assertTrue(block1.getNumRows() > 0, "First block is the result");
-    // second value is 1 (the literal) instead of 3 (the col val)
-    Assert.assertEquals(block1.getContainer().get(0), new Object[]{2, 3, 42.0},
-        "Expected three columns (original two columns, agg literal value)");
-    Assert.assertTrue(block2.isEndOfStreamBlock(), "Second block is EOS (done processing)");
+    assertEquals(resultRows.size(), 1);
+    assertEquals(resultRows.get(0), new Object[]{2, 3, 42.0});
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test
-  public void testPartitionByWindowAggregateWithHashCollision()
-      throws ProcessingException {
-    MultiStageOperator upstreamOperator = OperatorTestUtil.getOperator(OperatorTestUtil.OP_1);
-    // Create an aggregation call with sum for first column and group by second column.
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(0)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(1));
-    DataSchema inSchema = new DataSchema(new String[]{"arg", "group"}, new ColumnDataType[]{INT, STRING});
-    DataSchema outSchema =
-        new DataSchema(new String[]{"arg", "group", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
-    WindowAggregateOperator sum0PartitionBy1 =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), upstreamOperator, group,
-            Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE,
-            Integer.MAX_VALUE, WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
-
-    TransferableBlock result = sum0PartitionBy1.getNextBlock();
-    List<Object[]> resultRows = result.getContainer();
-    List<Object[]> expectedRows =
-        Arrays.asList(new Object[]{2, "BB", 5.0}, new Object[]{3, "BB", 5.0}, new Object[]{1, "Aa", 1.0});
-    Assert.assertEquals(resultRows.size(), expectedRows.size());
-    Assert.assertEquals(resultRows.get(0), expectedRows.get(0));
-    Assert.assertEquals(resultRows.get(1), expectedRows.get(1));
-    Assert.assertEquals(resultRows.get(2), expectedRows.get(2));
-  }
-
-  @Test(expectedExceptions = RuntimeException.class, expectedExceptionsMessageRegExp = ".*Failed to instantiate "
-      + "WindowFunction for function name: AVERAGE.*")
-  public void testShouldThrowOnUnknownAggFunction() {
+  public void testPartitionByWindowAggregateWithHashCollision() {
     // Given:
-    List<RexExpression> calls =
-        ImmutableList.of(new RexExpression.FunctionCall(ColumnDataType.INT, "AVERAGE", ImmutableList.of()));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-    DataSchema outSchema = new DataSchema(new String[]{"unknown"}, new ColumnDataType[]{DOUBLE});
-    DataSchema inSchema = new DataSchema(new String[]{"unknown"}, new ColumnDataType[]{DOUBLE});
+    _input = OperatorTestUtil.getOperator(OperatorTestUtil.OP_1);
+    DataSchema inputSchema = new DataSchema(new String[]{"arg", "group"}, new ColumnDataType[]{INT, STRING});
+    DataSchema resultSchema =
+        new DataSchema(new String[]{"arg", "group", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
+    List<Integer> keys = List.of(1);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(0)));
+    WindowAggregateOperator operator =
+        getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
     // When:
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+    List<Object[]> resultRows = operator.nextBlock().getContainer();
+
+    // Then:
+    verifyResultRows(resultRows, keys, Map.of("Aa", List.<Object[]>of(new Object[]{1, "Aa", 1.0}), "BB",
+        List.of(new Object[]{2, "BB", 5.0}, new Object[]{3, "BB", 5.0})));
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test(expectedExceptions = RuntimeException.class, expectedExceptionsMessageRegExp = ".*Failed to instantiate "
-      + "WindowFunction for function name: NTILE.*")
+      + "WindowFunction for function: AVERAGE.*")
+  public void testShouldThrowOnUnknownAggFunction() {
+    // Given:
+    DataSchema inputSchema = new DataSchema(new String[]{"unknown"}, new ColumnDataType[]{DOUBLE});
+    DataSchema resultSchema = new DataSchema(new String[]{"unknown"}, new ColumnDataType[]{DOUBLE});
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls =
+        List.of(new RexExpression.FunctionCall(ColumnDataType.INT, "AVERAGE", List.of()));
+
+    // When:
+    getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+        Integer.MIN_VALUE, Integer.MAX_VALUE);
+  }
+
+  @Test(expectedExceptions = RuntimeException.class, expectedExceptionsMessageRegExp = ".*Failed to instantiate "
+      + "WindowFunction for function: NTILE.*")
   public void testShouldThrowOnUnknownRankAggFunction() {
     // TODO: Remove this test when support is added for NTILE function
     // Given:
-    List<RexExpression> calls =
-        ImmutableList.of(new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.NTILE.name(), ImmutableList.of()));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-    DataSchema outSchema = new DataSchema(new String[]{"unknown"}, new ColumnDataType[]{DOUBLE});
-    DataSchema inSchema = new DataSchema(new String[]{"unknown"}, new ColumnDataType[]{DOUBLE});
+    DataSchema inputSchema = new DataSchema(new String[]{"unknown"}, new ColumnDataType[]{DOUBLE});
+    DataSchema resultSchema = new DataSchema(new String[]{"unknown"}, new ColumnDataType[]{DOUBLE});
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls =
+        List.of(new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.NTILE.name(), List.of()));
 
     // When:
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+    getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+        Integer.MIN_VALUE, Integer.MAX_VALUE);
   }
 
   @Test
   public void testRankDenseRankRankingFunctions()
       throws ProcessingException {
     // Given:
-    List<RexExpression> calls =
-        ImmutableList.of(new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.RANK.name(), ImmutableList.of()),
-            new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.DENSE_RANK.name(), ImmutableList.of()));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-    List<RexExpression> order = ImmutableList.of(new RexExpression.InputRef(1));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
     // Input should be in sorted order on the order by key as SortExchange will handle pre-sorting the data
-    Mockito.when(_input.nextBlock()).thenReturn(
-            OperatorTestUtil.block(inSchema, new Object[]{3, "and"}, new Object[]{2, "bar"}, new Object[]{2, "foo"},
+    when(_input.nextBlock()).thenReturn(
+            OperatorTestUtil.block(inputSchema, new Object[]{3, "and"}, new Object[]{2, "bar"}, new Object[]{2, "foo"},
                 new Object[]{1, "foo"})).thenReturn(
-            OperatorTestUtil.block(inSchema, new Object[]{1, "foo"}, new Object[]{2, "foo"}, new Object[]{1, "numb"},
+            OperatorTestUtil.block(inputSchema, new Object[]{1, "foo"}, new Object[]{2, "foo"}, new Object[]{1, "numb"},
                 new Object[]{2, "the"}, new Object[]{3, "true"}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "rank", "dense_rank"},
+    DataSchema resultSchema = new DataSchema(new String[]{"group", "arg", "rank", "dense_rank"},
         new ColumnDataType[]{INT, STRING, LONG, LONG});
+    List<Integer> keys = List.of(0);
+    List<RelFieldCollation> collations =
+        List.of(new RelFieldCollation(1, RelFieldCollation.Direction.ASCENDING, RelFieldCollation.NullDirection.LAST));
+    List<RexExpression.FunctionCall> aggCalls =
+        List.of(new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.RANK.name(), List.of()),
+            new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.DENSE_RANK.name(), List.of()));
+    WindowAggregateOperator operator =
+        getOperator(inputSchema, resultSchema, keys, collations, aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, 0);
 
     // When:
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, order, Collections.emptyList(),
-            Collections.emptyList(), calls, Integer.MIN_VALUE, 0, WindowNode.WindowFrameType.RANGE,
-            Collections.emptyList(), outSchema, inSchema, getWindowHints(ImmutableMap.of()));
+    List<Object[]> resultRows = operator.getNextBlock().getContainer();
 
-    TransferableBlock result = operator.getNextBlock();
-    TransferableBlock eosBlock = operator.getNextBlock();
-    List<Object[]> resultRows = result.getContainer();
-    Map<Integer, List<Object[]>> expectedPartitionToRowsMap = new HashMap<>();
-    expectedPartitionToRowsMap.put(1,
-        Arrays.asList(new Object[]{1, "foo", 1L, 1L}, new Object[]{1, "foo", 1L, 1L}, new Object[]{1, "numb", 3L, 2L}));
-    expectedPartitionToRowsMap.put(2,
-        Arrays.asList(new Object[]{2, "bar", 1L, 1L}, new Object[]{2, "foo", 2L, 2L}, new Object[]{2, "foo", 2L, 2L},
-            new Object[]{2, "the", 4L, 3L}));
-    expectedPartitionToRowsMap.put(3, Arrays.asList(new Object[]{3, "and", 1L, 1L}, new Object[]{3, "true", 2L, 2L}));
-
-    Integer previousPartitionKey = null;
-    Map<Integer, List<Object[]>> resultsPartitionToRowsMap = new HashMap<>();
-    for (Object[] row : resultRows) {
-      Integer currentPartitionKey = (Integer) row[0];
-      if (!currentPartitionKey.equals(previousPartitionKey)) {
-        Assert.assertFalse(resultsPartitionToRowsMap.containsKey(currentPartitionKey));
-      }
-      resultsPartitionToRowsMap.computeIfAbsent(currentPartitionKey, k -> new ArrayList<>()).add(row);
-      previousPartitionKey = currentPartitionKey;
-    }
-
-    resultsPartitionToRowsMap.forEach((key, value) -> {
-      List<Object[]> expectedRows = expectedPartitionToRowsMap.get(key);
-      Assert.assertEquals(value.size(), expectedRows.size());
-      for (int i = 0; i < value.size(); i++) {
-        Assert.assertEquals(value.get(i), expectedRows.get(i));
-      }
-    });
-    Assert.assertTrue(eosBlock.isEndOfStreamBlock(), "Second block is EOS (done processing)");
+    // Then:
+    verifyResultRows(resultRows, keys,
+        Map.of(1, List.of(new Object[]{1, "foo", 1L, 1L}, new Object[]{1, "foo", 1L, 1L}, new Object[]{
+                1, "numb", 3L, 2L
+            }), 2, List.of(new Object[]{2, "bar", 1L, 1L}, new Object[]{2, "foo", 2L, 2L}, new Object[]{
+                2, "foo", 2L, 2L
+            }, new Object[]{2, "the", 4L, 3L}), 3,
+            List.of(new Object[]{3, "and", 1L, 1L}, new Object[]{3, "true", 2L, 2L})));
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test
   public void testRowNumberRankingFunction()
       throws ProcessingException {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(
-        new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.ROW_NUMBER.name(), ImmutableList.of()));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-    List<RexExpression> order = ImmutableList.of(new RexExpression.InputRef(1));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
     // Input should be in sorted order on the order by key as SortExchange will handle pre-sorting the data
-    Mockito.when(_input.nextBlock()).thenReturn(
-            OperatorTestUtil.block(inSchema, new Object[]{3, "and"}, new Object[]{2, "bar"}, new Object[]{2, "foo"}))
+    when(_input.nextBlock()).thenReturn(
+            OperatorTestUtil.block(inputSchema, new Object[]{3, "and"}, new Object[]{2, "bar"}, new Object[]{2, "foo"}))
         .thenReturn(
-            OperatorTestUtil.block(inSchema, new Object[]{1, "foo"}, new Object[]{2, "foo"}, new Object[]{2, "the"},
+            OperatorTestUtil.block(inputSchema, new Object[]{1, "foo"}, new Object[]{2, "foo"}, new Object[]{2, "the"},
                 new Object[]{3, "true"})).thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema =
+    DataSchema resultSchema =
         new DataSchema(new String[]{"group", "arg", "row_number"}, new ColumnDataType[]{INT, STRING, LONG});
+    List<Integer> keys = List.of(0);
+    List<RelFieldCollation> collations =
+        List.of(new RelFieldCollation(1, RelFieldCollation.Direction.ASCENDING, RelFieldCollation.NullDirection.LAST));
+    List<RexExpression.FunctionCall> aggCalls =
+        List.of(new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.ROW_NUMBER.name(), List.of()));
+    WindowAggregateOperator operator =
+        getOperator(inputSchema, resultSchema, keys, collations, aggCalls, WindowNode.WindowFrameType.ROWS,
+            Integer.MIN_VALUE, 0);
 
     // When:
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, order, Collections.emptyList(),
-            Collections.emptyList(), calls, Integer.MIN_VALUE, 0, WindowNode.WindowFrameType.ROWS,
-            Collections.emptyList(), outSchema, inSchema, getWindowHints(ImmutableMap.of()));
+    List<Object[]> resultRows = operator.getNextBlock().getContainer();
 
-    TransferableBlock result = operator.getNextBlock();
-    TransferableBlock eosBlock = operator.getNextBlock();
-    List<Object[]> resultRows = result.getContainer();
-    Map<Integer, List<Object[]>> expectedPartitionToRowsMap = new HashMap<>();
-    expectedPartitionToRowsMap.put(1, Collections.singletonList(new Object[]{1, "foo", 1L}));
-    expectedPartitionToRowsMap.put(2,
-        Arrays.asList(new Object[]{2, "bar", 1L}, new Object[]{2, "foo", 2L}, new Object[]{2, "foo", 3L},
-            new Object[]{2, "the", 4L}));
-    expectedPartitionToRowsMap.put(3, Arrays.asList(new Object[]{3, "and", 1L}, new Object[]{3, "true", 2L}));
-
-    Integer previousPartitionKey = null;
-    Map<Integer, List<Object[]>> resultsPartitionToRowsMap = new HashMap<>();
-    for (Object[] row : resultRows) {
-      Integer currentPartitionKey = (Integer) row[0];
-      if (!currentPartitionKey.equals(previousPartitionKey)) {
-        Assert.assertFalse(resultsPartitionToRowsMap.containsKey(currentPartitionKey));
-      }
-      resultsPartitionToRowsMap.computeIfAbsent(currentPartitionKey, k -> new ArrayList<>()).add(row);
-      previousPartitionKey = currentPartitionKey;
-    }
-
-    resultsPartitionToRowsMap.forEach((key, value) -> {
-      List<Object[]> expectedRows = expectedPartitionToRowsMap.get(key);
-      Assert.assertEquals(value.size(), expectedRows.size());
-      for (int i = 0; i < value.size(); i++) {
-        Assert.assertEquals(value.get(i), expectedRows.get(i));
-      }
-    });
-    Assert.assertTrue(eosBlock.isEndOfStreamBlock(), "Second block is EOS (done processing)");
+    // Then:
+    verifyResultRows(resultRows, keys, Map.of(1, List.<Object[]>of(new Object[]{1, "foo", 1L}), 2,
+        List.of(new Object[]{2, "bar", 1L}, new Object[]{2, "foo", 2L}, new Object[]{2, "foo", 3L},
+            new Object[]{2, "the", 4L}), 3, List.of(new Object[]{3, "and", 1L}, new Object[]{3, "true", 2L})));
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test
   public void testNonEmptyOrderByKeysNotMatchingPartitionByKeys()
       throws ProcessingException {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(0)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-    List<RexExpression> order = ImmutableList.of(new RexExpression.InputRef(1));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
     // Input should be in sorted order on the order by key as SortExchange will handle pre-sorting the data
-    Mockito.when(_input.nextBlock()).thenReturn(
-            OperatorTestUtil.block(inSchema, new Object[]{3, "and"}, new Object[]{2, "bar"}, new Object[]{2, "foo"}))
-        .thenReturn(
-            OperatorTestUtil.block(inSchema, new Object[]{1, "foo"}, new Object[]{2, "foo"}, new Object[]{3, "true"}))
-        .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema =
+    when(_input.nextBlock()).thenReturn(
+            OperatorTestUtil.block(inputSchema, new Object[]{3, "and"}, new Object[]{2, "bar"}, new Object[]{2, "foo"}))
+        .thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{1, "foo"}, new Object[]{2, "foo"},
+            new Object[]{3, "true"})).thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
+    DataSchema resultSchema =
         new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
+    List<Integer> keys = List.of(0);
+    List<RelFieldCollation> collations =
+        List.of(new RelFieldCollation(1, RelFieldCollation.Direction.ASCENDING, RelFieldCollation.NullDirection.LAST));
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(0)));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, order,
-            Arrays.asList(RelFieldCollation.Direction.ASCENDING), Arrays.asList(RelFieldCollation.NullDirection.LAST),
-            calls, Integer.MIN_VALUE, Integer.MAX_VALUE, WindowNode.WindowFrameType.RANGE, Collections.emptyList(),
-            outSchema, inSchema, getWindowHints(ImmutableMap.of()));
+        getOperator(inputSchema, resultSchema, keys, collations, aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
-    TransferableBlock result = operator.getNextBlock();
-    TransferableBlock eosBlock = operator.getNextBlock();
-    List<Object[]> resultRows = result.getContainer();
-    List<Object[]> expectedRows =
-        Arrays.asList(new Object[]{1, "foo", 1.0}, new Object[]{2, "bar", 2.0}, new Object[]{2, "foo", 6.0},
-            new Object[]{2, "foo", 6.0}, new Object[]{3, "and", 3.0}, new Object[]{3, "true", 6.0});
-    Assert.assertEquals(resultRows.size(), expectedRows.size());
-    Assert.assertEquals(resultRows.get(0), expectedRows.get(0));
-    Assert.assertEquals(resultRows.get(1), expectedRows.get(1));
-    Assert.assertEquals(resultRows.get(2), expectedRows.get(2));
-    Assert.assertEquals(resultRows.get(3), expectedRows.get(3));
-    Assert.assertEquals(resultRows.get(4), expectedRows.get(4));
-    Assert.assertEquals(resultRows.get(5), expectedRows.get(5));
-    Assert.assertTrue(eosBlock.isEndOfStreamBlock(), "Second block is EOS (done processing)");
+    // When:
+    List<Object[]> resultRows = operator.getNextBlock().getContainer();
+
+    // Then:
+    verifyResultRows(resultRows, keys, Map.of(1, List.<Object[]>of(new Object[]{1, "foo", 1.0}), 2,
+        List.of(new Object[]{2, "bar", 2.0}, new Object[]{2, "foo", 6.0}, new Object[]{2, "foo", 6.0}), 3,
+        List.of(new Object[]{3, "and", 3.0}, new Object[]{3, "true", 6.0})));
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
+  }
+
+  @Test
+  public void testNonEmptyOrderByKeysMatchingPartitionByKeys() {
+    // Given:
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, "foo"}))
+        .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
+    DataSchema resultSchema =
+        new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
+    List<Integer> keys = List.of(1);
+    List<RelFieldCollation> collations =
+        List.of(new RelFieldCollation(1, RelFieldCollation.Direction.ASCENDING, RelFieldCollation.NullDirection.LAST));
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(0)));
+    WindowAggregateOperator operator =
+        getOperator(inputSchema, resultSchema, keys, collations, aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, 0);
+
+    // When:
+    List<Object[]> resultRows = operator.nextBlock().getContainer();
+
+    // Then:
+    assertEquals(resultRows.size(), 1);
+    assertEquals(resultRows.get(0), new Object[]{2, "foo", 2.0});
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test
@@ -466,85 +400,45 @@ public class WindowAggregateOperatorTest {
     // Set ORDER BY key same as PARTITION BY key with custom direction and null direction. Should still be treated
     // like a PARTITION BY only query (since the final aggregation value won't change).
     // TODO: Test null direction handling once support for it is available
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(0)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(1));
-    List<RexExpression> order = ImmutableList.of(new RexExpression.InputRef(1));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, "foo"}))
-        .thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, "bar"}))
-        .thenReturn(OperatorTestUtil.block(inSchema, new Object[]{3, "foo"}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, "foo"}))
+        .thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, "bar"}))
+        .thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{3, "foo"}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema =
+    DataSchema resultSchema =
         new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
+    List<Integer> keys = List.of(1);
+    List<RelFieldCollation> collations =
+        List.of(new RelFieldCollation(1, RelFieldCollation.Direction.DESCENDING, RelFieldCollation.NullDirection.LAST));
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(0)));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, order,
-            Arrays.asList(RelFieldCollation.Direction.DESCENDING), Arrays.asList(RelFieldCollation.NullDirection.LAST),
-            calls, Integer.MIN_VALUE, Integer.MAX_VALUE, WindowNode.WindowFrameType.RANGE, Collections.emptyList(),
-            outSchema, inSchema, getWindowHints(ImmutableMap.of()));
+        getOperator(inputSchema, resultSchema, keys, collations, aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
     // When:
-    TransferableBlock resultBlock = operator.nextBlock(); // (output result)
+    List<Object[]> resultRows = operator.nextBlock().getContainer();
 
     // Then:
-    Assert.assertEquals(resultBlock.getContainer().get(0), new Object[]{2, "bar", 2.0},
-        "Expected three columns (original two columns, agg literal value)");
-    Assert.assertEquals(resultBlock.getContainer().get(1), new Object[]{2, "foo", 5.0},
-        "Expected three columns (original two columns, agg literal value)");
-    Assert.assertEquals(resultBlock.getContainer().get(2), new Object[]{3, "foo", 5.0},
-        "Expected three columns (original two columns, agg literal value)");
+    verifyResultRows(resultRows, keys, Map.of("bar", List.<Object[]>of(new Object[]{2, "bar", 2.0}), "foo",
+        List.of(new Object[]{2, "foo", 5.0}, new Object[]{3, "foo", 5.0})));
+    assertTrue(operator.nextBlock().isSuccessfulEndOfStreamBlock(), "Second block is EOS (done processing)");
   }
 
   @Test(expectedExceptions = IllegalStateException.class, expectedExceptionsMessageRegExp = "Only RANGE type frames "
       + "are supported at present.*")
-  public void testShouldThrowOnCustomFramesRows() {
-    // TODO: Remove this test once custom frame support is added
+  public void testShouldThrowOnInvalidRowsFunction() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, "foo"}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, "foo"}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema =
+    DataSchema resultSchema =
         new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.ROWS, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
-  }
-
-  @Test
-  public void testShouldNotThrowCurrentRowPartitionByOrderByOnSameKey() {
-    // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(0)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(1));
-    List<RexExpression> order = ImmutableList.of(new RexExpression.InputRef(1));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, "foo"}))
-        .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema =
-        new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, order,
-            Arrays.asList(RelFieldCollation.Direction.ASCENDING), Arrays.asList(RelFieldCollation.NullDirection.LAST),
-            calls, Integer.MIN_VALUE, 0, WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
-
-    // When:
-    TransferableBlock block1 = operator.nextBlock();
-    TransferableBlock block2 = operator.nextBlock();
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
 
     // Then:
-    Assert.assertTrue(block1.getNumRows() > 0, "First block is the result");
-    Assert.assertEquals(block1.getContainer().get(0), new Object[]{2, "foo", 2.0},
-        "Expected three columns (original two columns, agg value)");
-    Assert.assertTrue(block2.isEndOfStreamBlock(), "Second block is EOS (done processing)");
+    getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.ROWS,
+        Integer.MIN_VALUE, Integer.MAX_VALUE);
   }
 
   @Test(expectedExceptions = IllegalStateException.class, expectedExceptionsMessageRegExp = "Only default frame is "
@@ -552,20 +446,17 @@ public class WindowAggregateOperatorTest {
   public void testShouldThrowOnCustomFramesCustomPreceding() {
     // TODO: Remove this test once custom frame support is added
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, "foo"}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, "foo"}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema =
+    DataSchema resultSchema =
         new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, 5, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
+
+    // Then:
+    getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE, 5,
+        Integer.MAX_VALUE);
   }
 
   @Test(expectedExceptions = IllegalStateException.class, expectedExceptionsMessageRegExp = "Only default frame is "
@@ -573,119 +464,152 @@ public class WindowAggregateOperatorTest {
   public void testShouldThrowOnCustomFramesCustomFollowing() {
     // TODO: Remove this test once custom frame support is added
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, "foo"}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, "foo"}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema =
+    DataSchema resultSchema =
         new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
-    WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, 5,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
+
+    // Then:
+    getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+        Integer.MIN_VALUE, 5);
   }
 
   @Test
   public void testShouldReturnErrorBlockOnUnexpectedInputType() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, STRING});
     // TODO: it is necessary to produce two values here, the operator only throws on second
     // (see the comment in WindowAggregate operator)
-    Mockito.when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, "metallica"}))
-        .thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, "pink floyd"}))
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, "metallica"}))
+        .thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, "pink floyd"}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema =
+    DataSchema resultSchema =
         new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, STRING, DOUBLE});
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
+    List<Integer> keys = List.of(0);
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema,
-            getWindowHints(ImmutableMap.of()));
+        getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE);
 
     // When:
     TransferableBlock block = operator.nextBlock();
 
     // Then:
-    Assert.assertTrue(block.isErrorBlock(), "expected ERROR block from invalid computation");
-    Assert.assertTrue(block.getExceptions().get(1000).contains("String cannot be cast to class"),
+    assertTrue(block.isErrorBlock(), "expected ERROR block from invalid computation");
+    assertTrue(block.getExceptions().get(1000).contains("String cannot be cast to class"),
         "expected it to fail with class cast exception");
   }
 
   @Test
   public void testShouldPropagateWindowLimitError() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-    Map<String, String> hintsMap = ImmutableMap.of(PinotHintOptions.WindowHintOptions.WINDOW_OVERFLOW_MODE, "THROW",
-        PinotHintOptions.WindowHintOptions.MAX_ROWS_IN_WINDOW, "1");
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
-    Mockito.when(_input.nextBlock())
-        .thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, 1}, new Object[]{3, 4}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, 1}, new Object[]{3, 4}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    DataSchema resultSchema =
+        new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
+    PlanNode.NodeHint nodeHint = new PlanNode.NodeHint(Map.of(PinotHintOptions.WINDOW_HINT_OPTIONS,
+        Map.of(PinotHintOptions.WindowHintOptions.WINDOW_OVERFLOW_MODE, "THROW",
+            PinotHintOptions.WindowHintOptions.MAX_ROWS_IN_WINDOW, "1")));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema, getWindowHints(hintsMap));
+        getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE, nodeHint);
 
     // When:
     TransferableBlock block = operator.nextBlock();
 
     // Then:
-    Assert.assertTrue(block.isErrorBlock(), "expected ERROR block from window overflow");
-    Assert.assertTrue(block.getExceptions().get(QueryException.SERVER_RESOURCE_LIMIT_EXCEEDED_ERROR_CODE)
+    assertTrue(block.isErrorBlock(), "expected ERROR block from window overflow");
+    assertTrue(block.getExceptions().get(QueryException.SERVER_RESOURCE_LIMIT_EXCEEDED_ERROR_CODE)
         .contains("reach number of rows limit"));
   }
 
   @Test
   public void testShouldHandleWindowWithPartialResultsWhenHitDataRowsLimit() {
     // Given:
-    List<RexExpression> calls = ImmutableList.of(getSum(new RexExpression.InputRef(1)));
-    List<RexExpression> group = ImmutableList.of(new RexExpression.InputRef(0));
-    Map<String, String> hintsMap = ImmutableMap.of(PinotHintOptions.WindowHintOptions.WINDOW_OVERFLOW_MODE, "BREAK",
-        PinotHintOptions.WindowHintOptions.MAX_ROWS_IN_WINDOW, "1");
-
-    DataSchema inSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
-    Mockito.when(_input.nextBlock())
-        .thenReturn(OperatorTestUtil.block(inSchema, new Object[]{2, 1}, new Object[]{3, 4}))
+    DataSchema inputSchema = new DataSchema(new String[]{"group", "arg"}, new ColumnDataType[]{INT, INT});
+    when(_input.nextBlock()).thenReturn(OperatorTestUtil.block(inputSchema, new Object[]{2, 1}, new Object[]{3, 4}))
         .thenReturn(TransferableBlockTestUtils.getEndOfStreamTransferableBlock(0));
-
-    DataSchema outSchema = new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    DataSchema resultSchema =
+        new DataSchema(new String[]{"group", "arg", "sum"}, new ColumnDataType[]{INT, INT, DOUBLE});
+    List<Integer> keys = List.of(0);
+    List<RexExpression.FunctionCall> aggCalls = List.of(getSum(new RexExpression.InputRef(1)));
+    PlanNode.NodeHint nodeHint = new PlanNode.NodeHint(Map.of(PinotHintOptions.WINDOW_HINT_OPTIONS,
+        Map.of(PinotHintOptions.WindowHintOptions.WINDOW_OVERFLOW_MODE, "BREAK",
+            PinotHintOptions.WindowHintOptions.MAX_ROWS_IN_WINDOW, "1")));
     WindowAggregateOperator operator =
-        new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, group, Collections.emptyList(),
-            Collections.emptyList(), Collections.emptyList(), calls, Integer.MIN_VALUE, Integer.MAX_VALUE,
-            WindowNode.WindowFrameType.RANGE, Collections.emptyList(), outSchema, inSchema, getWindowHints(hintsMap));
+        getOperator(inputSchema, resultSchema, keys, List.of(), aggCalls, WindowNode.WindowFrameType.RANGE,
+            Integer.MIN_VALUE, Integer.MAX_VALUE, nodeHint);
 
     // When:
-    TransferableBlock firstBlock = operator.nextBlock();
-    Mockito.verify(_input).earlyTerminate();
-    Assert.assertTrue(firstBlock.isDataBlock(), "First block should be a data block but is " + firstBlock.getClass());
-    Assert.assertEquals(firstBlock.getNumRows(), 1);
+    List<Object[]> resultRows = operator.nextBlock().getContainer();
 
-    TransferableBlock secondBlock = operator.nextBlock();
+    // Then:
+    verify(_input).earlyTerminate();
+    assertEquals(resultRows.size(), 1);
+    assertEquals(resultRows.get(0), new Object[]{2, 1, 1.0});
+    TransferableBlock block2 = operator.nextBlock();
+    assertTrue(block2.isSuccessfulEndOfStreamBlock());
     StatMap<WindowAggregateOperator.StatKey> windowStats =
-        OperatorTestUtil.getStatMap(WindowAggregateOperator.StatKey.class, secondBlock);
-    Assert.assertTrue(windowStats.getBoolean(WindowAggregateOperator.StatKey.MAX_ROWS_IN_WINDOW_REACHED),
+        OperatorTestUtil.getStatMap(WindowAggregateOperator.StatKey.class, block2);
+    assertTrue(windowStats.getBoolean(WindowAggregateOperator.StatKey.MAX_ROWS_IN_WINDOW_REACHED),
         "Max rows in window should be reached");
   }
 
-  private static RexExpression.FunctionCall getSum(RexExpression arg) {
-    return new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.SUM.name(), ImmutableList.of(arg));
+  private WindowAggregateOperator getOperator(DataSchema inputSchema, DataSchema resultSchema, List<Integer> keys,
+      List<RelFieldCollation> collations, List<RexExpression.FunctionCall> aggCalls,
+      WindowNode.WindowFrameType windowFrameType, int lowerBound, int upperBound, PlanNode.NodeHint nodeHint) {
+    return new WindowAggregateOperator(OperatorTestUtil.getTracingContext(), _input, inputSchema,
+        new WindowNode(-1, resultSchema, nodeHint, List.of(), keys, collations, aggCalls, windowFrameType, lowerBound,
+            upperBound, List.of()));
   }
 
-  private static AbstractPlanNode.NodeHint getWindowHints(Map<String, String> hintsMap) {
-    RelHint.Builder relHintBuilder = RelHint.builder(PinotHintOptions.WINDOW_HINT_OPTIONS);
-    hintsMap.forEach(relHintBuilder::hintOption);
-    return new AbstractPlanNode.NodeHint(ImmutableList.of(relHintBuilder.build()));
+  private WindowAggregateOperator getOperator(DataSchema inputSchema, DataSchema resultSchema, List<Integer> keys,
+      List<RelFieldCollation> collations, List<RexExpression.FunctionCall> aggCalls,
+      WindowNode.WindowFrameType windowFrameType, int lowerBound, int upperBound) {
+    return getOperator(inputSchema, resultSchema, keys, collations, aggCalls, windowFrameType, lowerBound, upperBound,
+        PlanNode.NodeHint.EMPTY);
+  }
+
+  private static RexExpression.FunctionCall getSum(RexExpression arg) {
+    return new RexExpression.FunctionCall(ColumnDataType.INT, SqlKind.SUM.name(), List.of(arg));
+  }
+
+  private static void verifyResultRows(List<Object[]> resultRows, List<Integer> keys,
+      Map<Object, List<Object[]>> expectedKeyedRows) {
+    int numKeys = keys.size();
+    Map<Object, List<Object[]>> keyedResultRows = new HashMap<>();
+    for (Object[] row : resultRows) {
+      Object key;
+      if (numKeys == 1) {
+        key = row[keys.get(0)];
+      } else {
+        Object[] values = new Object[numKeys];
+        for (int i = 0; i < numKeys; i++) {
+          values[i] = row[keys.get(i)];
+        }
+        key = new Key(values);
+      }
+      keyedResultRows.computeIfAbsent(key, k -> new ArrayList<>()).add(row);
+    }
+    assertEquals(keyedResultRows.size(), expectedKeyedRows.size());
+    for (Map.Entry<Object, List<Object[]>> entry : keyedResultRows.entrySet()) {
+      List<Object[]> expectedRows = expectedKeyedRows.get(entry.getKey());
+      assertNotNull(expectedRows);
+      verifyResultRows(entry.getValue(), expectedRows);
+    }
+  }
+
+  private static void verifyResultRows(List<Object[]> resultRows, List<Object[]> expectedRows) {
+    int numRows = resultRows.size();
+    assertEquals(numRows, expectedRows.size());
+    for (int i = 0; i < numRows; i++) {
+      assertEquals(resultRows.get(i), expectedRows.get(i));
+    }
   }
 }
